# lab-1

./: LICENSE  MANIFEST.in  Procfile  Procfile.windows  README.md  requirements.txt  setup.cfg  simple_photo_processor.py
app/: __init__.py  simple_photo_processor.py
app/templates/: index.html  layout.html
templates/: index.html  upload.html
tests/: test_simple_photo_processor.py
