[metadata]
name = simple_photo_processor
version = 1.0.0
url = https://flask.palletsprojects.com/tutorial/
license = MIT
maintainer = Eliza Marcum
maintainer_email = brocker@rose-hulman.edu
description = CSSE-490 Lab 1 starting code
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
install_requires =
    Flask
    Flask-WTF
    Pillow

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests